# bencode-py

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Cargo.toml  Contributors.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  _build.py  a.py  bench.py  cleanup.py  codecov.yml  cython_extensions.json  dprint.json  memory_leak.py  memory_leak_thread.py  meson.build  meson.options  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py  taskfile.dist.yaml  taskfile.dist.yml
.ci/: install-sccache.sh
.circleci/: config.yaml  config.yml
.github/: mergify.yml  renovate.json
.github/skills/compiled-extension-workflow/: SKILL.md
.github/skills/implementation-parity/: SKILL.md
.github/skills/pure-python-fallback/: SKILL.md
.github/workflows/: _build_conda.yaml  _build_wheels.yaml  _build_wheels_2.yaml  auto-update-subprojects.yaml  build.yaml  build.yml  build_wheels_main_pypi.yaml  build_wheels_main_pypi.yml  conda.yaml  lint.yaml  release.yaml  run_tests_mac.yml  run_tests_mac2.yml  run_tests_ubun.yml  run_tests_win.yml  tests.yaml  tests.yml
CythonProjectTemplate/: __init__.py  power.c  power.pyx
CythonProjectTemplate/module/: add.c  add.pxd  add.pyx
Tests/: Test_Add.py  Test_Power.py  test_a_power.py  test_decode.py  test_encode.py  test_torrent.py
bencode2/: __init__.py  _compat.pyx  _decoder.py  _decoder.pyi  _decoder.pyx  _encoder.py  _encoder.pyi  _encoder.pyx  _exceptions.py  _exceptions.pyi  _exceptions.pyx  decoder.pyx  encoder.pyx  exceptions.pyx
build_backend/: bencode2_build.py  build.py
ci/: zig-cxx.sh
conda/: recipe.yaml  variants.yaml
src/: decode.rs  encode.rs  lib.rs  typ.rs
src/bencode2/: __bencode.pyi  __decoder.py  __encoder.py  __init__.py  __init__.pyi  _decoder.py  _encoder.py  _exceptions.py  bencode.cpp  common.h  common.hpp  ctx.h  decode.cpp  decode.h  decode.hpp  encode.cpp  encode.h  encode.hpp  encode_ctx.h  encode_ctx.hpp  errors.hpp  overflow.h  overflow.hpp
src/bencode2/safe-int/: safeint.h
src/errors/: mod.rs
subprojects/: fmt.wrap
subprojects/packagefiles/fmt-11.0.2/: meson.build
subprojects/packagefiles/fmt-11.1.1/: meson.build
tests/: bench.py  conftest.py  test_buffer_leak.py  test_decode.py  test_encode.py  test_torrent.py
tests/fixtures/: 56507.torrent
