[package]
name = "bencode2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bencode2"
crate-type = ["cdylib"]

[dependencies]
"bencode-encoder" = '0.1.2'
bytes = "1.6.0"
errors = "0.0.0"
itoa = "1.0.11"
# pyo3 = { version = "0.21.1", features = ["extension-module", 'abi3'] }
pyo3 = { version = "0.21.1", features = ['abi3-py38'] }
smallvec = "1.13.2"
thiserror = "1.0.58"

# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
# features = ["abi3-py38"]
