[build-system]
requires = [
  "flit-core==3.12.0",
  'meson-python==0.18.0; implementation_name == "cpython"',
  'meson[ninja]==1.10.0; implementation_name == "cpython"',
]

# conditional build c++ extension
build-backend = "bencode2_build:build_api"
backend-path = ["build_backend"]

[project]
name = "bencode2"
version = "0.3.28"
description = "A fast and correct bencode serialize/deserialize library"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
authors = [
  { name = "trim21", email = "trim21me@gmail.com" },
]
readme = 'readme.md'
keywords = [
  "bencode",
  "bittorrent",
  "bit-torrent",
  "serialize",
  "deserialize",
  'p2p',
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  'typing_extensions>=4.8.0',
]

[project.urls]
Homepage = "https://github.com/trim21/bencode-py"
Repository = "https://github.com/trim21/bencode-py"
Issues = "https://github.com/trim21/bencode-py/issues"

[tool.meson-python.args]
setup = ['--errorlogs']
dist = ['--verbose']
compile = ['--verbose']
install = [
  '--verbose',
  # exclude .lib file in windows
  # https://github.com/mesonbuild/meson-python/issues/552#issuecomment-1863039032
  '--tags=runtime,python-runtime',
]

[tool.pytest.ini_options]
norecursedirs = ['vendor', '.venv', 'build', 'subprojects']

[tool.cibuildwheel]
skip = 'cp39-* *musl*'
enable = ['cpython-freethreading']
environment = { 'UV_LINK_MODE' = 'copy' }

manylinux-x86_64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
# before-all = "uv tool install sccache"
# environment-pass = ['SCCACHE_GHA_ENABLED', 'ACTIONS_CACHE_URL', 'ACTIONS_RUNTIME_TOKEN']
# environment = { "PATH" = "$PATH:/root/.local/bin" }

[tool.cibuildwheel.windows]
config-settings = { "setup-args" = ["-Dcpp_std=c++20"] }

[tool.black]
extend-exclude = 'vendor'
target-version = ['py310']
line-length = 88

[tool.ruff]
target-version = 'py310'
line-length = 88
extend-exclude = ['vendor']

src = ['src', 'tests']

[tool.ruff.lint]
extend-select = ['UP', 'I', 'E', "W", 'FA', 'ANN']
ignore = ['ANN401', 'E721', 'E501']

[tool.ruff.lint.per-file-ignores]
"tests/**" = ['ANN']
"setup.py" = ['ANN']

[tool.coverage.run]
source = [
  "src",
]

[tool.mypy]
exclude = ['tests', 'vendor']
python_version = "3.10"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
